[package]
name = "radiochron-node-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
radiochron = { git = "https://github.com/sergii-ziborov/radiochron", rev = "c5c3b4c30b5395b2c8cbc459f4e85982e5fdbb4a", version = "0.3.0", default-features = false, features = ["status", "scan", "analyze", "sample", "record", "connectivity"] }

[profile.release]
lto = "thin"
strip = true
