[package]
name = "radiochron-node-bridge"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
radiochron = { git = "https://github.com/sergii-ziborov/radiochron", rev = "fbd91670c4f15ce6d0e791d78da15189afb9f7e9", version = "0.4.0", default-features = false, features = ["status", "scan", "analyze", "sample", "record", "connectivity", "ble"] }

[profile.release]
lto = "thin"
strip = true
